--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -30,10 +30,14 @@
   "inviteToGroup": "Invite to group",
   "createGroup": "Create group",
   "inviteMembers": "Invite members",
-  "inviteToOrganization": "Invite a new person to your organization",
   "typeName": "Add members…",
+  "loading": "Loading...",
   "everyoneInvited": "Everyone has been invited to this group",
+  "feelsLonely": "Feeling lonely here?",
+  "noOtherMembers": "It seems that your Grape organization has no other members than you yet. Using a messenger is more convenient with several people, so why not invite someone. As soon as they join, you can come back and start a conversation.",
   "usersNotFoundFor": "No one found for",
+  "inviteUsersNow": "Invite users now",
+  "inviteToOrganization": "Invite a new person to your organization",
   "dropFileToUpload": "Drop your file to upload it!",
   "_dropFileToUpload.comment": "Hint on the drop overlay screen.",
   "dropFileToUploadMaxFileSize": "We support almost every file type up to a size of {limit}mb.",
@@ -76,22 +80,20 @@
   "read": "Read",
   "_read.comment": "message delivery status in tooltip",
   "tasks": "Tasks",
-  "_tasks.comment": "NLP tasks list dialog title.",
   "createTask": "Create Task",
   "_createTask.comment": "NLP create task dialog title.",
   "moreServices": "More Services",
   "_moreServices.comment": "More Services button in message nlp create task dialog.",
   "linkToAConnectedTask": "Link to a connected Task",
   "_linkToAConnectedTask.comment": "Nlp create task dialog link label.",
+  "_tasks.comment": "NLP tasks list dialog title.",
   "messageNotSendCheckConnection": "The message couldn't be sent. Check your internet connection and",
   "clickToTryAgain": "click to try again",
   "roomIsPublic": "This group is public. Every member can join and read the history.",
   "roomIsPrivate": "This group is private. Only invited members can see and join this group.",
   "welcomeToRoom": "Welcome to {channel}",
   "inviteMoreToGroup": "Invite more people to this group",
-  "_inviteMoreToGroup.comment": "Room Info Panel: invite people to the group/room",
   "addServiceIntegration": "Add service integration",
-  "_addServiceIntegration.comment": "Room Info Panel: link to add an integration to the current room",
   "welcomeToPm": "Private messages with {partner}",
   "pmIntro": "This is a private conversation between you and {partner}.{br}Private conversations are only accessible to the two of you.",
   "deleteMessagesQuestion": "Delete the selected Message?",
@@ -111,7 +113,6 @@
   "pinnedMesages": "Pinned Messages",
   "groupInfo": "Group Info",
   "userProfile": "User Profile",
-  "loading": "Loading...",
   "communication": "Communicating with Grape universe, this may take a moment",
   "wantToChat": "Want to chat?",
   "noChannelsToChatIn": "You have no people or groups to chat with at the moment. Join a group or start a new conversation to have more fun.",
@@ -171,6 +172,11 @@
   "inviteToOrgError": "Enter valid email addresses separated by a comma.",
   "sendInvites": "Send invitation emails",
   "personalMessage": "Personal message",
+  "leaveGroupDialogTitle": "Leave Private Group",
+  "leaveGroupDialogMessage": "Are you sure you want to leave the private group {channel}? You {wontAbleToRejoin} this group unless you get invited again.",
+  "wontAbleToRejoin": "won't be able to re-join",
+  "leaveGroupDialogCancel": "Cancel",
+  "leaveGroupDialogButton": "Leave private group",
   "linkAttachmentRemoveDialogTitle": "Remove attachment",
   "_linkAttachmentRemoveDialogTitle.comment": "Link attachment Remove Dialog: modal dialog title",
   "linkAttachmentRemoveDialogAdminDomain": "All links from {domain}",
@@ -341,6 +347,8 @@
   "notificationSettingsTooltip": "Edit notification settings",
   "membersList": "Members List",
   "_membersList.comment": "Room Info Panel: link to members list of the current room",
+  "_inviteMoreToGroup.comment": "Room Info Panel: invite people to the group/room",
+  "_addServiceIntegration.comment": "Room Info Panel: link to add an integration to the current room",
   "leaveChannel": "Leave {channel}",
   "_leaveChannel.comment": "Room Info Panel: leave room link",
   "members": "Members",
@@ -371,10 +379,5 @@
   "openInDesktop": "Open in Grape Desktop",
   "downloadGrape": "{download}, if you haven’t installed it yet.",
   "downloadGrapeDesktop": "Download Grape Desktop",
-  "altenativeBrowser": "Alternatively you can use Grape with {browsers} to enjoy the full experience.",
-  "leaveGroupDialogTitle": "Leave Private Group",
-  "leaveGroupDialogMessage": "Are you sure you want to leave the private group {channel}? You {wontAbleToRejoin} this group unless you get invited again.",
-  "wontAbleToRejoin": "won't be able to re-join",
-  "leaveGroupDialogCancel": "Cancel",
-  "leaveGroupDialogButton": "Leave private group"
+  "altenativeBrowser": "Alternatively you can use Grape with {browsers} to enjoy the full experience."
 }
