LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -11,18 +11,18 @@
   "reconnectAlert": "You've been successfully reconnected!",
   "noRoomFound": "We could not find what you were looking for - the group might have been deleted, renamed or moved.",
   "noMessageFound": "We could not find the message you were looking for.",
-  "cannotMessageYourself": "You cannot message yourself.",
+  "cannotMessageYourself": "You can't message yourself.",
   "loadingChatHistory": "Loading your chat history…",
   "grapeTrial": "Grape Trial",
   "continueTrial": "Continue Trial",
   "enterDetails": "Enter Details",
-  "privateMessageHint": "(Private message)",
+  "privateMessageHint": "(Private Conversation)",
   "_privateMessageHint.comment": "Browser notification private message hint.",
   "groupInviteNotificationTitle": "{name} invited you to the group {group}",
   "_groupInviteNotificationTitle.comment": "Browser notification group invite title.",
   "groupInviteNotificationContent": "{name} (Group Invite)",
   "_groupInviteNotificationContent.comment": "Browser notification group invite content.",
-  "grapeCallPmInvitationContent": "invites you to a Grape call …",
+  "grapeCallPmInvitationContent": "invites you to a Grape Call …",
   "_grapeCallPmInvitationContent.comment": "Browser notification for incoming pm Grape Call.",
   "grapeCallPmMissedContent": "called you",
   "_grapeCallPmMissedContent.comment": "Browser notification for missed pm Grape Call.",
@@ -36,8 +36,7 @@
   "feelsLonely": "Feeling lonely here?",
   "noOtherMembers": "It seems that your Grape organization has no other members than you yet. Using a messenger is more convenient with several people, so why not invite someone. As soon as they join, you can come back and start a conversation.",
   "usersNotFoundFor": "No one found for",
-  "inviteUsersNow": "Invite users now",
-  "inviteToOrganization": "Invite a new person to your organization",
+  "inviteUsersNow": "Invite members now",
   "dropFileToUpload": "Drop your file to upload it!",
   "_dropFileToUpload.comment": "Hint on the drop overlay screen.",
   "dropFileToUploadMaxFileSize": "We support almost every file type up to a size of {limit}mb.",
@@ -80,23 +79,25 @@
   "read": "Read",
   "_read.comment": "message delivery status in tooltip",
   "tasks": "Tasks",
+  "_tasks.comment": "NLP tasks list dialog title.",
   "createTask": "Create Task",
   "_createTask.comment": "NLP create task dialog title.",
   "moreServices": "More Services",
   "_moreServices.comment": "More Services button in message nlp create task dialog.",
   "linkToAConnectedTask": "Link to a connected Task",
   "_linkToAConnectedTask.comment": "Nlp create task dialog link label.",
-  "_tasks.comment": "NLP tasks list dialog title.",
   "messageNotSendCheckConnection": "The message couldn't be sent. Check your internet connection and",
-  "clickToTryAgain": "click to try again",
+  "clickToTryAgain": "click here to try again",
   "roomIsPublic": "This group is public. Every member can join and read the history.",
   "roomIsPrivate": "This group is private. Only invited members can see and join this group.",
   "welcomeToRoom": "Welcome to {channel}",
-  "inviteMoreToGroup": "Invite more people to this group",
+  "inviteMoreToGroup": "Invite more members to this group",
+  "_inviteMoreToGroup.comment": "Room Info Panel: invite people to the group/room",
   "addServiceIntegration": "Add service integration",
-  "welcomeToPm": "Private messages with {partner}",
+  "_addServiceIntegration.comment": "Room Info Panel: link to add an integration to the current room",
+  "welcomeToPm": "Private conversation with {partner}",
   "pmIntro": "This is a private conversation between you and {partner}.{br}Private conversations are only accessible to the two of you.",
-  "deleteMessagesQuestion": "Delete the selected Message?",
+  "deleteMessagesQuestion": "Delete the selected message?",
   "linkInClipboard": "Message link added to clipboard",
   "close": "Close",
   "closeLower": "close",
@@ -108,7 +109,7 @@
   "description": "Description",
   "create": "Create",
   "enter": "Enter",
-  "justInvited": "Congratulations! You just invited {user} {amount, plural, =0 {} one {and one more people} other {and {amount} more people}}.",
+  "justInvited": "Congratulations! You just invited {user} {amount, plural, =0 {} one {and one more member} other {and {amount} more members}}.",
   "sharedFiles": "Shared Files",
   "pinnedMesages": "Pinned Messages",
   "groupInfo": "Group Info",
@@ -141,7 +142,7 @@
   "_introTextGroups.comment": "Intro data text.",
   "introHlPm": "Communicate 1-to-1",
   "_introHlPm.comment": "Intro data hl.",
-  "introTextPm": "Start quickly private conversations with your colleagues - even if they haven’t joined Grape yet.",
+  "introTextPm": "Start private conversations with your colleagues - even if they haven’t joined Grape yet.",
   "_introTextPm.comment": "Intro data text.",
   "introHlSearch": "Stay productive",
   "_introHlSearch.comment": "Intro search hl.",
@@ -162,15 +163,14 @@
   "skipIfDone": "Already done?{skip}",
   "_skipIfDone.comment": "Intro footer",
   "inviteGuest": "Invite a guest to this group",
-  "emailAddresses": "Email addresses",
+  "emailAddresses": "E-mail addresses",
   "inviteLink": "Or use this invite-link",
-  "inviteToOrgTitle": "Invite people to your organization",
-  "inviteToOrgNote": "Invite multiple users at once, just separate their email addresses with a comma.",
+  "inviteToOrgTitle": "Invite members to your organization",
+  "inviteToOrgNote": "Invite multiple members at once, just separate their e-mail addresses with a comma.",
   "InviteToOrgMessage": "You can add personal message to the invitation email.",
   "loadingLink": "Loading link…",
   "_loadingLink.comment": "used in invite to org link input placeholder, while link is loading",
-  "inviteToOrgError": "Enter valid email addresses separated by a comma.",
-  "sendInvites": "Send invitation emails",
+  "sendInvites": "Send invitation e-mails",
   "personalMessage": "Personal message",
   "leaveGroupDialogTitle": "Leave Private Group",
   "leaveGroupDialogMessage": "Are you sure you want to leave the private group {channel}? You {wontAbleToRejoin} this group unless you get invited again.",
@@ -195,7 +195,7 @@
   "_loginHeadline.comment": "Embedded chat login view headline.",
   "loginHint": "Please log in to join the conversation on Grape.",
   "_loginHint.comment": "Embedded chat login view hint.",
-  "loginSubmit": "Log me in",
+  "loginSubmit": "Log in now",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
   "manageGroupsJoinableBtn": "join",
   "_manageGroupsJoinableBtn.comment": "Manage Groups Dialog: join button label",
@@ -234,7 +234,7 @@
   "_blockquoteExample.comment": "Markdown: blockquote example",
   "markdownTipsPitch": "How to improve your chat messages with some nifty styles",
   "markdownTipsDialogTitle": "Markdown tips",
-  "deletedUser": "Deleted user",
+  "deletedUser": "Deleted member",
   "dateSeparatorToday": "Today, {date}",
   "_dateSeparatorToday.comment": "Date separator used in history, search, mentions etc.",
   "dateSeparatorYesterday": "Yesterday, {date}",
@@ -255,7 +255,7 @@
   "localTime": "Local time",
   "newConversation": "New Conversation",
   "_newConversation.comment": "*Describe NewConversation*: this is used in Navigation",
-  "searchPeopleAndGroups": "Search people and groups…",
+  "searchPeopleAndGroups": "Search members and groups…",
   "nothingThatMatches": "There's nothing that matches ",
   "favorites": "Favorites",
   "recent": "Recent",
@@ -347,8 +347,6 @@
   "notificationSettingsTooltip": "Edit notification settings",
   "membersList": "Members List",
   "_membersList.comment": "Room Info Panel: link to members list of the current room",
-  "_inviteMoreToGroup.comment": "Room Info Panel: invite people to the group/room",
-  "_addServiceIntegration.comment": "Room Info Panel: link to add an integration to the current room",
   "leaveChannel": "Leave {channel}",
   "_leaveChannel.comment": "Room Info Panel: leave room link",
   "members": "Members",
@@ -369,10 +367,10 @@
   "searchSidebarTitle": "Search Results",
   "whatIDo": "What I do",
   "contactInfo": "Contact information",
-  "email": "Email",
+  "email": "E-mail",
   "skype": "Skype",
   "phone": "Phone",
-  "aboutUserTitle": "About this user",
+  "aboutUserTitle": "About this member",
   "_aboutUserTitle.comment": "User profile sidebar, about user title.",
   "videoConferencingTitle": "Sorry, video conferencing isn't supported in this browser.",
   "unsupportedBrowser": "Unfortunately, the browser you are using at the moment doesn’t support video conferencing with Grape Call. Please use our {desktopApp} instead.",
