LingoHub Update :rocket:
Manual push by LingoHub User: Lukas Gauster.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -37,9 +37,9 @@
   "noOtherMembers": "Es scheint, als ob Ihre Grape-Organisation noch keine Mitglieder außer Ihnen hat. Ein Messenger funktioniert meistens mit mehreren Mitgliedern deutlich besser, also warum nicht ein paar einladen? Sobald jemand beitritt können Sie Ihre Konversationen beginnen.",
   "usersNotFoundFor": "Niemand gefunden für",
   "inviteUsersNow": "jetzt Mitglieder einladen",
-  "inviteToOrganization": "Laden Sie ein neues Mitglied in Ihre Organisation ein",
   "dropFileToUpload": "Datei hier ablegen, um sie zu teilen!",
   "_dropFileToUpload.comment": "Hint on the drop overlay screen.",
+  "inviteToOrganization": "Laden Sie ein neues Mitglied in Ihre Organisation ein",
   "dropFileToUploadMaxFileSize": "Fast alle Dateien bis zu einer Größe von {limit} MB werden unterstützt.",
   "_dropFileToUploadMaxFileSize.comment": "Hint on the drop overlay screen.",
   "fileUploadTitle": "Lade {uploading} von {total} Dateien hoch",
@@ -53,6 +53,7 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} schreibt gerade",
   "userAndUsersAreTyping": "{users} und {user} schreiben gerade",
+  "usersAreTyping": "{users} und {othersAmount} {othersAmount, plural, one {other} other {others}} schreiben gerade",
   "imageWithDescr": "Bild: [{description}]",
   "_imageWithDescr.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescr": "Bild: [Keine Beschreibung]",
@@ -134,6 +135,10 @@
   "_introTextWelcome.comment": "Intro welcome text.",
   "introHlSearchBrowser": "Finden Sie Ihre Team Informationen",
   "_introHlSearchBrowser.comment": "Intro SearchBrowser hl.",
+  "introTextSearchBrowser": "Suchen Sie nach Ihren Dokumenten, Terminen und vielem mehr aus Ihren Service Integrationen (wie Google Apps oder Microsoft Sharepoint) oder durchsuchen Sie das Internet (z.B.: nach GIFs).",
+  "_introTextSearchBrowser.comment": "Intro SearchBrowser text.",
+  "introHlManageGroups": "Gruppen verwalten",
+  "_introHlManageGroups.comment": "Intro data hl.",
   "introTextGroups": "Gruppen können öffentlich oder privat sein und orientieren sich oft an Projekten, Themen (z.B.: Kundenprojekt XY, Mittagessen) oder Abteilungen (z.B.: Marketing, Vertrieb).",
   "_introTextGroups.comment": "Intro data text.",
   "introHlPm": "Kommunizieren Sie 1:1",
@@ -142,6 +147,8 @@
   "_introTextPm.comment": "Intro data text.",
   "introHlSearch": "Bleiben Sie produktiv",
   "_introHlSearch.comment": "Intro search hl.",
+  "introTextSearch": "Durchsuchen Sie Gespräche, Konversationen in denen Sie erwähnt wurden oder sehen Sie alle geteilten Dateien - diese kleinen Helfer machen Ihr Arbeitsleben einfacher.",
+  "_introTextSearch.comment": "Intro search text.",
   "addTeamMembersLinkIntro": "Ihre Team Mitglieder einzuladen",
   "_addTeamMembersLinkIntro.comment": "Link to the members admin within 'Well done' intro screen.",
   "connectServicesLinkIntro": "Ihre Services zu integrieren",
@@ -159,11 +166,12 @@
   "inviteGuest": "Laden Sie einen Gast in diese Gruppe ein",
   "emailAddresses": "E-Mail Adressen",
   "inviteLink": "Nutzen Sie den Link zur Einladung",
+  "inviteToOrgTitle": "Laden Sie Mitglieder in Ihre Organisation ein",
+  "inviteToOrgError": "Geben Sie gültige E-Mail Adressen ein, getrennt durch ein Komma.",
   "inviteToOrgNote": "Laden Sie mehrere Mitglieder ein, indem Sie ihre E-Mail Adressen mit Kommas trennen.",
   "InviteToOrgMessage": "Fügen Sie eine persönliche Nachricht an.",
   "loadingLink": "Link wird geladen..",
   "_loadingLink.comment": "used in invite to org link input placeholder, while link is loading",
-  "inviteToOrgError": "Geben Sie gültige E-Mail Adressen ein, getrennt durch ein Komma.",
   "sendInvites": "Einladungen per E-Mail verschicken",
   "personalMessage": "Persönliche Nachricht",
   "leaveGroupDialogTitle": "Private Gruppe verlassen",
@@ -364,6 +372,8 @@
   "email": "E-Mail",
   "skype": "Skype",
   "phone": "Telefon",
+  "aboutUserTitle": "Über dieses Mitglied",
+  "_aboutUserTitle.comment": "User profile sidebar, about user title.",
   "videoConferencingTitle": "Leider unterstützt dieser Browser keine Videokonferenz.",
   "unsupportedBrowser": "Der Browser, den Sie im Moment verwenden, unterstützt leider keine Videokonferenz mit Grape Call. Bitte benutzen Sie stattdessen unsere {desktopApp}.",
   "openInDesktop": "In Grape Desktop öffnen",
