LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -26,7 +26,7 @@
   "_grapeCallPmInvitationContent.comment": "Browser notification for incoming pm Grape Call.",
   "grapeCallPmMissedContent": "dzwonią do Ciebie",
   "_grapeCallPmMissedContent.comment": "Browser notification for missed pm Grape Call.",
-  "createNewPrivateGroup": "",
+  "createNewPrivateGroup": "Tworzenie nowej prywatnej grupy",
   "inviteToGroup": "Zaproszenie do grupy",
   "createGroup": "Tworzenie grupy",
   "inviteMembers": "Zaproś użytkowników",
@@ -340,7 +340,7 @@
   "_emptyPinnedMessagesSidebarHeadline.comment": "Headline in the sidebar, pinned messages zero design.",
   "emptyPinnedMessagesSidebarDescription": "Wybierz \"Przypięte wiadomość\" w menu kontekstowym każdej wiadomości, aby wyświetlić ją tutaj.",
   "_emptyPinnedMessagesSidebarDescription.comment": "Description in the sidebar, pinned messages zero design.",
-  "makeRoomPrivate": "",
+  "makeRoomPrivate": "Uczynić grupę prywatną",
   "makeRoomPublic": "Zmień grupę na publiczną",
   "deleteRoom": "Usuń grupę",
   "editGroup": "Edytuj grupę",
@@ -372,7 +372,7 @@
   "email": "E-mail",
   "skype": "Skype",
   "phone": "Telefon",
-  "aboutUserTitle": "",
+  "aboutUserTitle": "O tym członku",
   "_aboutUserTitle.comment": "User profile sidebar, about user title.",
   "videoConferencingTitle": "Przykro mi, ale wideokonferencje nie są obsługiwane w tej przeglądarce.",
   "unsupportedBrowser": "Niestety, używana obecnie przeglądarka nie obsługuje wideokonferencji z Grape Call. Proszę użyć zamiast tego naszego {desktopApp}.",
