LingoHub Update :rocket:
Manual push by LingoHub User: Lukas Gauster.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -263,6 +263,7 @@
   "recent": "Ostatnie",
   "enterGroupName": "Wpisz nazwę grupy",
   "private": "Prywatny",
+  "public": "Publiczność",
   "notificationSettingsTitle": "Powiadomienie w {group}",
   "_notificationSettingsTitle.comment": "Notification settings dialog.",
   "notificationSettingDefault": "Domyślne ustawienia powiadomień",
