--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -257,7 +257,7 @@
   "localTime": "Local time",
   "newConversation": "New Conversation",
   "_newConversation.comment": "*Describe NewConversation*: this is used in Navigation",
-  "searchPeopleAndGroups": "Search members and groups…",
+  "searchMembersAndGroups": "Search members and groups…",
   "nothingThatMatches": "There's nothing that matches ",
   "favorites": "Favorites",
   "recent": "Recent",
