LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -37,9 +37,9 @@
   "noOtherMembers": "Es scheint, als ob Ihre Grape-Organisation noch keine Mitglieder außer Ihnen hat. Ein Messenger funktioniert meistens mit mehreren Mitgliedern deutlich besser, also warum nicht ein paar einladen? Sobald jemand beitritt können Sie Ihre Konversationen beginnen.",
   "usersNotFoundFor": "Niemand gefunden für",
   "inviteUsersNow": "jetzt Mitglieder einladen",
+  "inviteToOrganization": "Laden Sie ein neues Mitglied in Ihre Organisation ein",
   "dropFileToUpload": "Datei hier ablegen, um sie zu teilen!",
   "_dropFileToUpload.comment": "Hint on the drop overlay screen.",
-  "inviteToOrganization": "Laden Sie ein neues Mitglied in Ihre Organisation ein",
   "dropFileToUploadMaxFileSize": "Fast alle Dateien bis zu einer Größe von {limit} MB werden unterstützt.",
   "_dropFileToUploadMaxFileSize.comment": "Hint on the drop overlay screen.",
   "fileUploadTitle": "Lade {uploading} von {total} Dateien hoch",
@@ -93,7 +93,7 @@
   "roomIsPrivate": "Diese Gruppe ist privat. Nur eingeladene Mitglieder können sie sehen oder ihr beitreten.",
   "welcomeToRoom": "Willkommen zu {channel}",
   "inviteMoreToGroup": "Weitere Mitglieder zur Gruppe einladen",
-  "_inviteMoreToGroup.comment": "Room Info Panel: invite people to the group/room",
+  "_inviteMoreToGroup.comment": "Room Info Panel: invite members to the group/room",
   "addServiceIntegration": "Service Integration hinzufügen",
   "_addServiceIntegration.comment": "Room Info Panel: link to add an integration to the current room",
   "welcomeToPm": "Privatnachricht mit {partner}",
@@ -167,11 +167,11 @@
   "emailAddresses": "E-Mail Adressen",
   "inviteLink": "Nutzen Sie den Link zur Einladung",
   "inviteToOrgTitle": "Laden Sie Mitglieder in Ihre Organisation ein",
-  "inviteToOrgError": "Geben Sie gültige E-Mail Adressen ein, getrennt durch ein Komma.",
   "inviteToOrgNote": "Laden Sie mehrere Mitglieder ein, indem Sie ihre E-Mail Adressen mit Kommas trennen.",
   "InviteToOrgMessage": "Fügen Sie eine persönliche Nachricht an.",
   "loadingLink": "Link wird geladen..",
   "_loadingLink.comment": "used in invite to org link input placeholder, while link is loading",
+  "inviteToOrgError": "Geben Sie gültige E-Mail Adressen ein, getrennt durch ein Komma.",
   "sendInvites": "Einladungen per E-Mail verschicken",
   "personalMessage": "Persönliche Nachricht",
   "leaveGroupDialogTitle": "Private Gruppe verlassen",
