--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -37,9 +37,9 @@
   "noOtherMembers": "It seems that your Grape organization has no other members than you yet. Using a messenger is more convenient with several people, so why not invite someone. As soon as they join, you can come back and start a conversation.",
   "usersNotFoundFor": "No one found for",
   "inviteUsersNow": "Invite members now",
+  "inviteToOrganization": "Invite a new person to your organization",
   "dropFileToUpload": "Drop your file to upload it!",
   "_dropFileToUpload.comment": "Hint on the drop overlay screen.",
-  "inviteToOrganization": "Invite a new person to your organization",
   "dropFileToUploadMaxFileSize": "We support almost every file type up to a size of {limit}mb.",
   "_dropFileToUploadMaxFileSize.comment": "Hint on the drop overlay screen.",
   "fileUploadTitle": "Uploading {uploading} of {total} files",
@@ -93,7 +93,7 @@
   "roomIsPrivate": "This group is private. Only invited members can see and join this group.",
   "welcomeToRoom": "Welcome to {channel}",
   "inviteMoreToGroup": "Invite more members to this group",
-  "_inviteMoreToGroup.comment": "Room Info Panel: invite people to the group/room",
+  "_inviteMoreToGroup.comment": "Room Info Panel: invite members to the group/room",
   "addServiceIntegration": "Add service integration",
   "_addServiceIntegration.comment": "Room Info Panel: link to add an integration to the current room",
   "welcomeToPm": "Private conversation with {partner}",
@@ -167,11 +167,11 @@
   "emailAddresses": "E-mail addresses",
   "inviteLink": "Or use this invite-link",
   "inviteToOrgTitle": "Invite members to your organization",
-  "inviteToOrgError": "Enter valid e-mail addresses separated by a comma.",
   "inviteToOrgNote": "Invite multiple members at once, just separate their e-mail addresses with a comma.",
   "InviteToOrgMessage": "You can add personal message to the invitation email.",
   "loadingLink": "Loading link…",
   "_loadingLink.comment": "used in invite to org link input placeholder, while link is loading",
+  "inviteToOrgError": "Enter valid e-mail addresses separated by a comma.",
   "sendInvites": "Send invitation e-mails",
   "personalMessage": "Personal message",
   "leaveGroupDialogTitle": "Leave Private Group",
