--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -37,9 +37,9 @@
   "noOtherMembers": "Wydaje się, że Twoja organizacja Grape nie ma jeszcze innych użytkowników niż ty. Korzystanie z komunikatora jest wygodniejsze, jeżeli korzysta z niego kilka osób, więc dlaczego nie zaprosić kogoś. Jak tylko się dołączą, możecie wrócić i rozpocząć rozmowę.",
   "usersNotFoundFor": "Nie znaleziono nikogo dla",
   "inviteUsersNow": "Zaproś teraz użytkowników",
+  "inviteToOrganization": "Zaproś nowego użytkownika do swojej organizacji",
   "dropFileToUpload": "Dodaj swój plik, aby go wgrać!",
   "_dropFileToUpload.comment": "Hint on the drop overlay screen.",
-  "inviteToOrganization": "Zaproś nowego użytkownika do swojej organizacji",
   "dropFileToUploadMaxFileSize": "Wspieramy prawie każdy typ pliku do rozmiaru {limit}mb.",
   "_dropFileToUploadMaxFileSize.comment": "Hint on the drop overlay screen.",
   "fileUploadTitle": "Wgrywanie {uploading} plików {total}",
@@ -93,7 +93,7 @@
   "roomIsPrivate": "Ta grupa jest prywatna. Tylko zaproszeni członkowie mogą ja zobaczyć i dołączyć do tej grupy.",
   "welcomeToRoom": "Witamy w {channel}",
   "inviteMoreToGroup": "Zaproś więcej użytkowników do tej grupy",
-  "_inviteMoreToGroup.comment": "Room Info Panel: invite people to the group/room",
+  "_inviteMoreToGroup.comment": "Room Info Panel: invite members to the group/room",
   "addServiceIntegration": "Dodaj integrację usług",
   "_addServiceIntegration.comment": "Room Info Panel: link to add an integration to the current room",
   "welcomeToPm": "Prywatna konwersacja z {partner}",
@@ -167,11 +167,11 @@
   "emailAddresses": "Adresy e-mail",
   "inviteLink": "Albo użyj tego zaproszenia",
   "inviteToOrgTitle": "Zaproś użytkowników do swojej organizacji",
-  "inviteToOrgError": "Wpisz prawidłowy adres e-mail oddzielony przecinkiem.",
   "inviteToOrgNote": "Zaproś wielu użytkowników na raz, po prostu oddziel ich adresy e-mailowe przecinkiem.",
   "InviteToOrgMessage": "Do wiadomości z zaproszeniem możesz dodać osobistą wiadomość.",
   "loadingLink": "Ładowanie linku...",
   "_loadingLink.comment": "used in invite to org link input placeholder, while link is loading",
+  "inviteToOrgError": "Wpisz prawidłowy adres e-mail oddzielony przecinkiem.",
   "sendInvites": "Wyślij zaproszenie na e-mail",
   "personalMessage": "Wiadomość personalna",
   "leaveGroupDialogTitle": "Opuść prywatną grupę",
