LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client: Grape Browser

Made with :heart: by https://lingohub.com

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -1,6 +1,6 @@
 {
   "noEmojiFound": "Kein Emoji gefunden.",
-  "enterMessagePlaceholder": "Stichwort eingeben …",
+  "enterKeywordPlaceholder": "Stichwort eingeben …",
   "groupPostingLimitedPlaceholder": "Posten in diese Gruppe wurde eingeschränkt.",
   "willNotifyRoom": "— jeden in dieser Gruppe benachrichtigen",
   "_willNotifyRoom.comment": "*Describe willNotifyRoom*: this string is decribing action",
