LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client: Grape Browser

Made with :heart: by https://lingohub.com

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -1,13 +1,12 @@
 {
   "noEmojiFound": "Kein Emoji gefunden.",
   "enterKeywordPlaceholder": "Stichwort eingeben…",
-  "enterMessagePlaceholder": "Enter a message…",
   "groupPostingLimitedPlaceholder": "Posten in diese Gruppe wurde eingeschränkt.",
-  "willNotifyRoom": "— jeden in dieser Gruppe benachrichtigen",
-  "_willNotifyRoom.comment": "*Describe willNotifyRoom*: this string is decribing action",
-  "wontNotifyRoom": "— Benachrichtigt keine Gruppenmitglieder",
-  "_wontNotifyRoom.comment": "*Describe wountNotifyRoom*: this string is decribing action",
-  "notInRoom": "nicht in Gruppe",
+  "willNotifyGroup": "— jeden in dieser Gruppe benachrichtigen",
+  "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
+  "wontNotifyGroup": "— Benachrichtigt keine Gruppenmitglieder",
+  "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
+  "notInGroup": "nicht in Gruppe",
   "insertAction": "In Nachricht einfügen",
   "openAction": "Öffnen",
   "noDetailForItem": "Keine Zusatzinformationen für dieses Ergebnis",
