--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -1,13 +1,12 @@
 {
   "noEmojiFound": "Nie znaleziono żadnego emoji.",
   "enterKeywordPlaceholder": "Wpisz słowo kluczowe…",
-  "enterMessagePlaceholder": "Enter a message…",
   "groupPostingLimitedPlaceholder": "Postowania na tej grupie zostało ograniczone.",
-  "willNotifyRoom": "- powiadom wszystkich w tej grupie",
-  "_willNotifyRoom.comment": "*Describe willNotifyRoom*: this string is decribing action",
-  "wontNotifyRoom": "- nie powiadamiaj użytkowników grupy",
-  "_wontNotifyRoom.comment": "*Describe wountNotifyRoom*: this string is decribing action",
-  "notInRoom": "niedostępne w grupie",
+  "willNotifyGroup": "- powiadom wszystkich w tej grupie",
+  "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
+  "wontNotifyGroup": "- nie powiadamiaj użytkowników grupy",
+  "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
+  "notInGroup": "niedostępne w grupie",
   "insertAction": "Wstaw do wiadomości",
   "openAction": "Otwarte",
   "noDetailForItem": "Brak szczegółowych informacji na temat tej pozycji",
