Added enterMessagePlaceholder key to Polish and German translations

--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -1,6 +1,7 @@
 {
   "noEmojiFound": "Nie znaleziono żadnego emoji.",
   "enterKeywordPlaceholder": "Wpisz słowo kluczowe…",
+  "enterMessagePlaceholder": "Enter a message…",
   "groupPostingLimitedPlaceholder": "Postowania na tej grupie zostało ograniczone.",
   "willNotifyGroup": "- powiadom wszystkich w tej grupie",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
