--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -1,6 +1,7 @@
 {
   "noEmojiFound": "Kein Emoji gefunden.",
   "enterKeywordPlaceholder": "Stichwort eingeben…",
+  "enterMessagePlaceholder": "Enter a message…",
   "groupPostingLimitedPlaceholder": "Posten in diese Gruppe wurde eingeschränkt.",
   "willNotifyGroup": "— jeden in dieser Gruppe benachrichtigen",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
